sanger/sites/CVID_activation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation
spec:
  selector:
    matchLabels:
      app: cvid-activation
  replicas: 1
  template:
    metadata: 
      name: cvid-activation
      labels:
        app: cvid-activation
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: cvid-activation
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/CVID_activation/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation-nocpg
spec:
  selector:
    matchLabels:
      app: cvid-activation-nocpg
  replicas: 1
  template:
    metadata: 
      name: cvid-activation-nocpg
      labels:
        app: cvid-activation-nocpg
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cvid-activation-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: cvid-activation-nocpg
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_activation_CVID_final_cellxgene_noCCGs_bbknn_by_seq_batch_noCpG_with_doublets_annot_Javi.h5ad", "--title", "CVID activation", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "1.5Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation-harmony
spec:
  selector:
    matchLabels:
      app: cvid-activation-harmony
  replicas: 1
  template:
    metadata: 
      name: cvid-activation-harmony
      labels:
        app: cvid-activation-harmony
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cvid-activation-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: cvid-activation-harmony
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_activation_CVID_cellxgene_harmony.h5ad", "--title", "CVID activation harmony", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "1.5Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation-gex-only
spec:
  selector:
    matchLabels:
      app: cvid-activation-gex-only
  replicas: 1
  template:
    metadata: 
      name: cvid-activation-gex-only
      labels:
        app: cvid-activation-gex-only
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cvid-activation-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: cvid-activation-gex-only
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_for_cellxgene_GEX_only.h5ad", "--title", "CVID GEX only", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "20Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation-gex-only-no-batch
spec:
  selector:
    matchLabels:
      app: cvid-activation-gex-only-no-batch
  replicas: 1
  template:
    metadata: 
      name: cvid-activation-gex-only-no-batch
      labels:
        app: cvid-activation-gex-only-no-batch
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cvid-activation-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: cvid-activation-gex-only-no-batch
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_for_cellxgene_GEX_only_B_cells_not_batch_corrected.h5ad", "--title", " B cells, GEX only, no batch correction", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "15Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation-gex-and-soupx-denoised
spec:
  selector:
    matchLabels:
      app: cvid-activation-gex-and-soupx-denoised
  replicas: 1
  template:
    metadata: 
      name: cvid-activation-gex-and-soupx-denoised
      labels:
        app: cvid-activation-gex-and-soupx-denoised
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cvid-activation-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: cvid-activation-gex-and-soupx-denoised
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_for_cellxgene_GEX_and_SoupX_denoised_protein_BBKNN.h5ad", "--title", "GEX and SoupX denoised protein BBKNN", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "5Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvid-activation-gex-bbknn-all-samples
spec:
  selector:
    matchLabels:
      app: cvid-activation-gex-bbknn-all-samples
  replicas: 1
  template:
    metadata: 
      name: cvid-activation-gex-bbknn-all-samples
      labels:
        app: cvid-activation-gex-bbknn-all-samples
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cvid-activation-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: cvid-activation-gex-bbknn-all-samples
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_GEX_only_BBKNN_by_sample_all_samples.h5ad", "--title", "adata_GEX_only_BBKNN_by_sample_all_samples", "--host", "0.0.0.0", "--port", "5005", "--disable-annotations"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "5Gi"
            cpu: 1
---
