sanger/sites/CVID_activation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvid-activation
  labels:
    app: cvid-activation
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: cvid-activation
---
apiVersion: v1
kind: Service
metadata:
  name: cvid-activation-harmony
  labels:
    app: cvid-activation-harmony
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cvid-activation-harmony
---
apiVersion: v1
kind: Service
metadata:
  name: cvid-activation-nocpg
  labels:
    app: cvid-activation-nocpg
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cvid-activation-nocpg
---
apiVersion: v1
kind: Service
metadata:
  name: cvid-activation-gex-only
  labels:
    app: cvid-activation-gex-only
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cvid-activation-gex-only
---
apiVersion: v1
kind: Service
metadata:
  name: cvid-activation-gex-only-no-batch
  labels:
    app: cvid-activation-gex-only-no-batch
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cvid-activation-gex-only-no-batch
---
apiVersion: v1
kind: Service
metadata:
  name: cvid-activation-gex-and-soupx-denoised
  labels:
    app: cvid-activation-gex-and-soupx-denoised
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cvid-activation-gex-and-soupx-denoised
---
apiVersion: v1
kind: Service
metadata:
  name: vid-activation-gex-bbknn-all-samples 
  labels:
    app: vid-activation-gex-bbknn-all-samples 
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: vid-activation-gex-bbknn-all-samples 
---
