sanger/sites/CVID_activation/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: cvid-activation
spec:
  virtualhost:
    fqdn: cvid-activation.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: cvid-activation
          port: 80
    - match: /static
      prefixRewrite: "/" 
      services:
        - name: cvid-activation-harmony
          port: 80
    - match: /nocpg
      prefixRewrite: "/" 
      services:
        - name: cvid-activation-nocpg
          port: 80
    - match: /harmony
      prefixRewrite: "/" 
      services:
        - name: cvid-activation-harmony
          port: 80
    - match: /gex-only
      prefixRewrite: "/" 
      services:
        - name: cvid-activation-gex-only
          port: 80
---
